# private-assistant-comms-satellite-py

./: .copier-answers.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  local_config.yaml  mypy.ini  pyproject.toml  pytest.toml  renovate.json
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: python_code_quality.yml  release-please.yml  release-to-pypi.yml
assets/: install.sh
assets/wakeword_models/: hey_nova.onnx  hey_nova.tflite
docs/: api.md  architecture.md  audio-processing-config.md  getting-started.md  performance.md
integration/: __init__.py  conftest.py  test_wake_word_detection.py
src/private_assistant_comms_satellite/: __init__.py  __main__.py  audio_processing.py  cli.py  main.py  micro_wake_word.py  satellite.py  silero_vad.py
src/private_assistant_comms_satellite/utils/: __init__.py  config.py  debug_audio.py  ground_station_client.py  mqtt_utils.py  sound_generation.py  speech_recognition_tools.py
tests/: test_audio_processing.py  test_config.py  test_micro_wake_word.py  test_mqtt_utils.py  test_silero_vad.py  test_speech_recognition_tools.py
