[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "private-assistant-comms-satellite"
version = "1.6.0"
description = "The satellite is an open source library to work with the private assistant oecosystem built to run on edge devices. It allows the other components to interact speech based with the user and listen for user keywords to activate."
authors = [{ name = "stkr22", email = "stkr22@github.com" }]
readme = "README.md"
license = "GPL-3.0-only"
license-files = [
    "LICENSE",
]

keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12"
]

requires-python = ">=3.12,<3.13"
dependencies = [
    "pyyaml",
    "pydantic",
    "private-assistant-commons~=6.3.0",
    "numpy~=2.3.0",
    "websockets~=16.0",
    "pysilero-vad~=3.2.0",
    "typer~=0.21.0",
    "sounddevice~=0.5.1",
    "scipy>=1.14.0",
    "pymicro-features>=0.1.0",
    "ai-edge-litert>=1.2.0",
]


[project.scripts]
comms-satellite = "private_assistant_comms_satellite.cli:app"

[project.urls]
Homepage = "https://github.com/stkr22/private-assistant-comms-satellite-py"
Repository = "https://github.com/stkr22/private-assistant-comms-satellite-py"
Documentation = "https://github.com/stkr22/private-assistant-comms-satellite-py/tree/main/docs"
Issues = "https://github.com/stkr22/private-assistant-comms-satellite-py/issues"
Changelog = "https://github.com/stkr22/private-assistant-comms-satellite-py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff~=0.14.14",
    "mypy~=1.19.1",
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "pytest-asyncio~=1.3.0",
    "soundfile~=0.12.1",
    "scipy-stubs~=1.17.0.1",
    "types-pyyaml~=6.0.12.20240311",
    "piper-tts>=1.2.0",
]
